--- a/EMPAPP1-master/webapp/manifest.json
+++ b/EMPAPP1-master/webapp/manifest.json
@@ -168,7 +168,8 @@
         },
         "Others":{
             "viewType": "XML",
-            "viewName": "Others"
+            "viewName": "Others",
+            "viewId": "others"
         }
       }
     }
